--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "axios": "^1.3.4",
+    "d3": "^7.8.2",
+    "d3-path": "^3.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
