--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.3.4",
     "d3": "^7.8.2",
     "d3-path": "^3.1.0",
+    "fuse.js": "^6.6.2",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
