Add images to routes

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -14,3 +14,6 @@ MONGO_PASSWORD=
 # Super User
 FIRST_SUPERUSER=admin@pwx.com
 FIRST_SUPERUSER_PASSWORD=admin
+
+# Route image static dir
+ROUTE_IMG_DATA_DIR=static
