--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,18 +1,18 @@
 BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:5173", "http://localhost:3000", "http://localhost:8080", "https://localhost", "https://localhost:5173", "https://localhost:3000", "https://localhost:8080"]
-PROJECT_NAME=pwx
+PROJECT_NAME=cwx
 SERVER_NAME=localhost
 SERVER_HOST=http://localhost
 
 
 # MongoDB
 MONGO_HOST=localhost
-MONGO_DB=pwx
+MONGO_DB=cwx
 MONGO_PORT=27017
 MONGO_USER=
 MONGO_PASSWORD=
 
 # Super User
-FIRST_SUPERUSER=admin@pwx.com
+FIRST_SUPERUSER=admin@cwx.com
 FIRST_SUPERUSER_PASSWORD=admin
 
 # Route image static dir
