--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ STACK_NAME=cwx
 TRAEFIK_PUBLIC_NETWORK=traefik-public
 TRAEFIK_TAG=cwx
 TRAEFIK_PUBLIC_TAG=traefik-public
+TRAEFIK_PUBLIC_NETWORK_IS_EXTERNAL=false
 
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
