Fix docker compose setup in production to use https

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ TRAEFIK_PUBLIC_NETWORK=traefik-public
 TRAEFIK_TAG=cwx
 TRAEFIK_PUBLIC_TAG=traefik-public
 TRAEFIK_PUBLIC_NETWORK_IS_EXTERNAL=false
+TRAEFIK_TLS_EMAIL=admin@cwx.com
 
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
