--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,15 @@ services:
       - ${TRAEFIK_PUBLIC_NETWORK?Variable not set}
       - default
     ports:
-      - "80:80"
-      - "8090:8080"
+      - 443:443
+      - 80:80
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./letsencrypt:/letsencrypt
     command:
+      - --log.level=INFO
       # Enable Docker in Traefik, so that it reads labels from Docker services
       - --providers.docker
-      # Add a constraint to only use services with the label for this stack
-      # from the env var TRAEFIK_TAG
-      - --providers.docker.constraints=Label(`traefik.constraint-label-stack`, `${TRAEFIK_TAG?Variable not set}`)
       # Do not expose all Docker services, only the ones explicitly exposed
       - --providers.docker.exposedbydefault=false
       # Enable the access log, with HTTP requests
@@ -25,45 +24,43 @@ services:
       - --log
       # Enable the Dashboard and API
       - --api
+      # Configure web and websecure entrypoints
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      # Setup Let's Encrypt Acme challenge to generate certificates
+      - --certificatesresolvers.le.acme.tlschallenge=true
+      - --certificatesresolvers.le.acme.email=${TRAEFIK_TLS_EMAIL?Variable not set}
+      - --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
     labels:
       # Enable Traefik for this service, to make it available in the public network
-      - traefik.enable=true
+      traefik.enable: true
       # Use the traefik-public network (declared below)
-      - traefik.docker.network=${TRAEFIK_PUBLIC_NETWORK?Variable not set}
-      # Use the custom label "traefik.constraint-label=traefik-public"
-      # This public Traefik will only use services with this label
-      - traefik.constraint-label=${TRAEFIK_PUBLIC_TAG?Variable not set}
-      # traefik-http set up only to use the middleware to redirect to https
-      # - traefik.http.middlewares.${STACK_NAME?Variable not set}-https-redirect.redirectscheme.scheme=https
-      # - traefik.http.middlewares.${STACK_NAME?Variable not set}-https-redirect.redirectscheme.permanent=true
-      # Handle host with and without "www" to redirect to only one of them
-      # Uses environment variable DOMAIN
-      # To disable www redirection remove the Host() you want to discard, here and
-      # below for HTTPS
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-http.rule=Host(`${DOMAIN?Variable not set}`) || Host(`www.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-http.entrypoints=http
-      # traefik-https the actual router using HTTPS
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-https.rule=Host(`${DOMAIN?Variable not set}`) || Host(`www.${DOMAIN?Variable not set}`)
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-https.entrypoints=https
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-https.tls=true
-      # Use the "le" (Let's Encrypt) resolver created below
-      # - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-https.tls.certresolver=le
-      # Define the port inside of the Docker service to use
-      - traefik.http.services.${STACK_NAME?Variable not set}-proxy.loadbalancer.server.port=80
-      # Handle domain with and without "www" to redirect to only one
-      # To disable www redirection remove the next line
-      - traefik.http.middlewares.${STACK_NAME?Variable not set}-www-redirect.redirectregex.regex=^https?://(www.)?(${DOMAIN?Variable not set})/(.*)
-      # Redirect a domain with www to non-www
-      # To disable it remove the next line
-      - traefik.http.middlewares.${STACK_NAME?Variable not set}-www-redirect.redirectregex.replacement=https://${DOMAIN?Variable not set}/$${3}
-      # Redirect a domain without www to www
-      # To enable it remove the previous line and uncomment the next
-      # - traefik.http.middlewares.${STACK_NAME}-www-redirect.redirectregex.replacement=https://www.${DOMAIN}/$${3}
-      # Middleware to redirect www, to disable it remove the next line
-      - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-https.middlewares=${STACK_NAME?Variable not set}-www-redirect
-      # Middleware to redirect www, and redirect HTTP to HTTPS
-      # to disable www redirection remove the section: ${STACK_NAME?Variable not set}-www-redirect,
-      # - traefik.http.routers.${STACK_NAME?Variable not set}-proxy-http.middlewares=${STACK_NAME?Variable not set}-www-redirect,${STACK_NAME?Variable not set}-https-redirect
+      traefik.docker.network: ${TRAEFIK_PUBLIC_NETWORK?Variable not set}
+      # Global redirection: http to https
+      traefik.http.routers.http-catchall.rule: HostRegexp(`{host:(www\.)?${DOMAIN?Variable not set}}`)
+      traefik.http.routers.http-catchall.entrypoints: web
+      traefik.http.routers.http-catchall.middlewares: wwwtohttps
+
+      # Global redirection: https (www.) to https
+      traefik.http.routers.wwwsecure-catchall.rule: HostRegexp(`{host:(www\.)${DOMAIN?Variable not set}}`)
+      traefik.http.routers.wwwsecure-catchall.entrypoints: websecure
+      traefik.http.routers.wwwsecure-catchall.tls: true
+      traefik.http.routers.wwwsecure-catchall.middlewares: wwwtohttps
+
+      # middleware: http(s)://(www.) to  https://
+      traefik.http.middlewares.wwwtohttps.redirectregex.regex: ^https?://(?:www\.)?(.+)
+      traefik.http.middlewares.wwwtohttps.redirectregex.replacement: https://$${1}
+      traefik.http.middlewares.wwwtohttps.redirectregex.permanent: true
+
+      # Traefik dashboard
+      # Uncomment to enable access to dashboard, but it will conflict with /api bath for backend.
+      # traefik.http.routers.dashboard.rule: Host(`${DOMAIN?Variable not set}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+      # traefik.http.routers.dashboard.entrypoints: websecure
+      # traefik.http.routers.dashboard.tls: true
+      # traefik.http.routers.dashboard.tls.certresolver: le
+      # traefik.http.routers.dashboard.service: api@internal
+      # traefik.http.routers.dashboard.middlewares: auth
+      # traefik.http.middlewares.auth.basicauth.users: admin:$$apr1$$8EVjn/nj$$GiLUZqcbueTFeD23SuB6x0 # username: admin, password: admin
 
   backend:
     image: '${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}'
@@ -83,9 +80,10 @@ services:
         INSTALL_DEV: ${INSTALL_DEV-false}
     labels:
       - traefik.enable=true
-      - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
       - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.rule=PathPrefix(`/api`) || PathPrefix(`/docs`) || PathPrefix(`/redoc`)
-      - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.tls=true
+      - traefik.http.routers.${STACK_NAME?Variable not set}-backend-http.tls.certresolver=le
+      # - traefik.http.services.${STACK_NAME?Variable not set}-backend.loadbalancer.server.port=80
 
   db:
     image: mongo:latest
@@ -111,9 +109,10 @@ services:
       - .env
     labels:
       - traefik.enable=true
-      - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
       - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=PathPrefix(`/`)
-      - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
+      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.tls=true
+      - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.tls.certresolver=le
+      # - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
 
 volumes:
   app-db-data:
