--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,5 +20,13 @@ RUN npm run build
 
 
 FROM nginx:1.23.1
+
+# Remove default nginx configuration
+RUN rm /etc/nginx/conf.d/*
+
+# Remove default nginx static assets
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built app and nginx conf
 COPY --from=builder /app/dist/ /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/conf.d
