--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -17,3 +17,10 @@ FIRST_SUPERUSER_PASSWORD=admin
 
 # Route image static dir
 ROUTE_IMG_DATA_DIR=static
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# HOSTNAME used to build google redirect uri
+GOOGLE_CALLBACK_HOSTNAME=http://localhost:8000
+# Callback URL we redirect to after google login
+GOOGLE_LOGIN_CALLBACK_URL=http://localhost:5173/sso-login-callback
