Rework of login, signup and profile pages to manage google login

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -20,7 +20,9 @@ ROUTE_IMG_DATA_DIR=static
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 # HOSTNAME used to build google redirect uri
-GOOGLE_CALLBACK_HOSTNAME=http://localhost:8000
+SSO_CALLBACK_HOSTNAME=http://localhost:8000
 # Callback URL we redirect to after google login
-GOOGLE_LOGIN_CALLBACK_URL=http://localhost:5173/sso-login-callback
+SSO_LOGIN_CALLBACK_URL=http://localhost:5173/sso-login-callback
