--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,7 @@ COPY ./ /app/
 
 ARG FRONTEND_ENV=production
 ARG VITE_BACKEND_API_URL
+ARG VITE_PWD_SIGNUP_ENABLED
 
 ENV VITE_APP_ENV=${FRONTEND_ENV}
 
