--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.43.2",
     "react-router-dom": "^6.8.2",
     "sort-by": "^0.0.2"
