--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/d3": "^7.4.0",
+    "@types/d3-path": "^3.0.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
