--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ TRAEFIK_TLS_EMAIL=admin@cwx.com
 
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
+DOCKER_PACKAGE_REPOSITORY=ghcr.io/jonasrenault
 
 # Backend
 BACKEND_CORS_ORIGINS=["http://localhost", "http://localhost:5173", "http://localhost:3000", "http://localhost:8080", "https://localhost", "https://localhost:5173", "https://localhost:3000", "https://localhost:8080", "http://dev.cwx.com", "https://stag.cwx.com", "https://cwx.com", "http://local.dockertoolbox.tiangolo.com", "http://localhost.tiangolo.com"]
