--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,12 @@ env:
 
 jobs:
   # Build docker images with docker compose and push to github registry
-  build-deploy-to-registry:
-    name: Docker build and push to ghcr
+  build-push-to-registry:
+    name: Docker compose build and push to ghcr
     runs-on: ubuntu-latest
-    environment: prod
+    environment:
+      name: prod
+      url: https://cwx.jrenault.fr
 
     steps:
       - name: Git checkout
@@ -43,3 +45,32 @@ jobs:
 
       - name: Push image to container registry
         run: docker compose -f docker-compose.prod.yml push
+
+  deploy-on-server:
+    name: Deploy app to vps
+    runs-on: ubuntu-latest
+    needs: build-push-to-registry
+    environment:
+      name: prod
+      url: https://cwx.jrenault.fr
+
+    steps:
+      - name: Deploy to server over ssh
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_USERNAME: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          envs: GITHUB_USERNAME, GITHUB_TOKEN
+          script: |
+            docker login ghcr.io -u $GITHUB_USERNAME -p $GITHUB_TOKEN
+            cd cwx
+            git pull
+            docker compose -f docker-compose.prod.yml pull
+            docker compose -f docker-compose.prod.yml down
+            docker system prune -f
+            docker compose -f docker-compose.prod.yml up -d
