Change workflow_run dependency on build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on:
 
   workflow_run:
     workflows: ["Run tests"]
-    branches: [main]
+    # branches: [main]
     types:
       - completed
 
