--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ on:
     branches:
       - main
 
-  workflow_run:
-    workflows: ["Run tests"]
-    # branches: [main]
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["Run tests"]
+  #   branches: [main]
+  #   types:
+  #     - completed
 
 env:
   REGISTRY: ghcr.io
