--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,16 @@
 name: Build and deploy
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
+  # Trigger the workflow on push to main branch
   push:
     branches:
       - main
-  # Replace pull_request with pull_request_target if you
-  # plan to use this action with forks, see the Limitations section
-  pull_request:
-    branches:
-      - main
 
-  # workflow_run:
-  #   workflows: ["Run tests"]
-  #   branches: [main]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["Run tests"]
+    branches: [main]
+    types:
+      - completed
 
 env:
   REGISTRY: ghcr.io
@@ -26,7 +20,7 @@ jobs:
   build-push-to-registry:
     name: Docker compose build and push to ghcr
     runs-on: ubuntu-latest
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment:
       name: prod
       url: https://cwx.jrenault.fr
@@ -77,9 +71,11 @@ jobs:
           script: |
             echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_USERNAME --password-stdin
             cd cwx
+            git checkout .env
             git pull
             echo "$SERVER_ENV_FILE" > .env
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml down
             docker system prune -f
             docker compose -f docker-compose.prod.yml up -d
+            docker logout
